--- a/ecommerce/src/index.html
+++ b/ecommerce/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ecommerce</title>
+  <title>summerz</title>
+  <link rel="shortcut icon" type="image/png" href="assets/sakura.png"/>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
